Add Korean translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hamonikr-nemo-rabbitvcs (1.1.0) jin; urgency=medium
+
+  * Add rabbitvcs-0.18/po/ko.po
+   - Add Korean translation 
+
+ -- HamoniKR <pkg@hamonikr.org>  Sat, 22 May 2021 21:47:22 +0900
+
+
 hamonikr-nemo-rabbitvcs (1.0.0) jin; urgency=medium
 
   * Initial release. 
