--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hamonikr-nemo-rabbitvcs (1.3.2) stable; urgency=medium
+
+  * Update settings
+   - hide svn, hg in context menu
+
+ -- HamoniKR <pkg@hamonikr.org>  Thu, 12 Oct 2023 13:10:35 +0900
+
 hamonikr-nemo-rabbitvcs (1.3.1) stable; urgency=medium
 
   * Hide other vcs
