--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hamonikr-nemo-rabbitvcs (1.3.3+h1) stable; urgency=medium
+
+  * Release for bookworm arm64
+   - No change
+
+ -- HamoniKR <pkg@hamonikr.org>  Fri, 12 Jul 2024 02:25:43 +0900
+
 hamonikr-nemo-rabbitvcs (1.3.3) stable; urgency=medium
 
   * Release for ubuntu 24.04 noble
