--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hamonikr-nemo-rabbitvcs (1.3.3+h2) stable; urgency=medium
+
+  * Fix postinst
+
+ -- HamoniKR <pkg@hamonikr.org>  Sun, 25 Aug 2024 00:36:34 +0900
+
 hamonikr-nemo-rabbitvcs (1.3.3+h1) stable; urgency=medium
 
   * Release for bookworm arm64
