버전 1.4.0으로 업그레이드: GTK4 마이그레이션 완료 및 의존성 업데이트

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+hamonikr-nemo-rabbitvcs (1.4.0) stable; urgency=medium
+
+  * GTK4 마이그레이션 완료
+    - GTK 3.0에서 4.0으로 업그레이드
+    - GtkTemplateHelper 클래스 추가
+    - MessageDialog 클래스 및 헬퍼 함수 추가
+    - Adwaita 지원 추가 (AboutWindow)
+    - 이벤트 컨트롤러 지원 추가
+    - IconFactory 제거 및 GTK4 호환성 개선
+    - show_all() → show() 메서드로 변경
+    - 모든 UI 파일 및 클라이언트 파일 GTK4 호환
+    - 하이브리드 접근법으로 GTK3/GTK4 모두 지원
+
+ -- HamoniKR <pkg@hamonikr.org>  Sun, 25 Aug 2024 00:36:34 +0900
+
 hamonikr-nemo-rabbitvcs (1.3.3+h2) stable; urgency=medium
 
   * Fix postinst
